# docs/swagger.json
@@ -1137,7 +1137,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "upload"
+                    "message"
                 ],
                 "summary": "发布文件消息",
                 "parameters": [
@@ -1156,21 +1156,17 @@
                         "required": true
                     },
                     {
+                        "type": "integer",
                         "description": "关系id",
                         "name": "relation_id",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
+                        "in": "formData",
+                        "required": true
                     },
                     {
+                        "type": "integer",
                         "description": "回复消息id",
                         "name": "rly_msg_id",
-                        "in": "body",
-                        "schema": {
-                            "type": "integer"
-                        }
+                        "in": "formData"
                     }
                 ],
                 "responses": {
